GET /movies/{movieId} 완성
