# src/functions/resources/getMovie.js
@@ -1,0 +1,27 @@
+import _ from 'lodash';
+
+import LotteCinemaService from '../../services/LotteCinemaService';
+
+export default (event, context, callback) => {
+  LotteCinemaService.getMovie(_.get(event, 'pathParameters.id'))
+    .then(body =>
+      callback(null, {
+        statusCode: 200,
+        headers: {
+          'Access-Control-Allow-Origin': '*',
+          'Access-Control-Allow-Credentials': true,
+        },
+        body: JSON.stringify(body),
+      })
+    )
+    .catch(e => {
+      callback(null, {
+        statusCode: 502,
+        headers: {
+          'Access-Control-Allow-Origin': '*',
+          'Access-Control-Allow-Credentials': true,
+        },
+        body: JSON.stringify(e.message),
+      });
+    });
+};
