# src/functions/resources/handler.js
@@ -1,2 +1,3 @@
 export { default as getCinemas } from './getCinemas';
 export { default as getScreens } from './getScreens';
+export { default as getMovie } from './getMovie';
